--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   logger: ^0.6.0
   sqflite: ^1.2.0
   path_provider: ^1.5.1
+  camera: ^0.5.2+1
+  path: ^1.6.2
+  esys_flutter_share: ^1.0.2
 
 dev_dependencies:
   flutter_test:
